fix: change images path

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -11,7 +11,7 @@
         <span>info@laserbiolabs.com</span>
     </div>
     <span  id="footer-logo-cont">
-        <img id="footer-logo" src="images/logo_LBL.png">
+        <img id="footer-logo" src="static/images/logo_LBL.png">
     </span>
 
 </div>
