--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -1,6 +1,6 @@
 <nav id="header-nav">
     <span id="header-logo-cont">
-        <img id="header-logo" src="images/logo_LBL.png">
+        <img id="header-logo" src="static/images/logo_LBL.png">
     </span>
     <span class="header-nav-item"> <a href="index.html">Home</a>                  </span>
     <span class="header-nav-item dropbtn"> 
