First draft of landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,78 @@
 {% block title %} Home {% endblock %}
 {% block page_content %} 
 
+<section class="section is-medium">
+    <div class="grid">
+        <div class="cell">
+            <h1 class="title is-1">Precision MALDI-TOF MS Calibration Standards</h1>
+            <h4 class="subtitle">Leading manufacturer of high-quality calibration kits for MALDI mass spectrometry. Trusted by laboratories worldwide for accurate and reliable results.</h4>
+            <a href="/catalog" class="button">View Catalog</a>
+            <a href="/contact" class="button">Contact us</a>
+
+        </div>
+        <div class="cell"> 
+            <img src="static/images/landing_page_pipette.jpeg"/>
+        </div>
+    </div>
+</section>
+
+<section class="section is-medium">
+    <div class="container">
+        <h1 class="title is-2 m-3 has-text-centered">Why Choose Laser Bio Labs?</h1>
+        <h4 class="subtitle is-4 m-5 has-text-centered"> We provide the highest quality calibration standards with unmatched precision and reliability </h4>
+    </div>
+    <div class="container">
+        <div class="grid">
+            <div class="cell">
+                <div class="card">
+                  <div class="card-image">
+                    <figure class="image is-128x128">
+                      <img src="https://bulma.io/assets/images/placeholders/128x128.png" alt="Placeholder image"/>
+                    </figure>
+                  </div>
+                </div>
+            </div>
+            <div class="cell">
+                <div class="card">
+                  <div class="card-image">
+                    <figure class="image is-128x128">
+                      <img src="https://bulma.io/assets/images/placeholders/128x128.png" alt="Placeholder image"/>
+                    </figure>
+                  </div>
+                </div>
+            </div>
+            <div class="cell">
+                <div class="card">
+                  <div class="card-image">
+                    <figure class="image is-128x128">
+                      <img src="https://bulma.io/assets/images/placeholders/128x128.png" alt="Placeholder image"/>
+                    </figure>
+                  </div>
+                </div>
+            </div>
+            <div class="cell">
+                <div class="card">
+                  <div class="card-image">
+                    <figure class="image is-128x128">
+                      <img src="https://bulma.io/assets/images/placeholders/128x128.png" alt="Placeholder image"/>
+                    </figure>
+                  </div>
+                </div>
+            </div>
+    </div>
+</section>
+
+
+
 <section class="section-left background-protein">
-<h2 class="highlight">Serving science since 2001</h2>
-<h1 class="section-title">LaserBio Labs</h1>
-<div class="subtext">
-    LaserBio Labs was founded in 2001, with the goal of providing high-quality and <br>
-    affordable solutions for MALDI-TOF mass spectrometry to laboratories worldwide.<br>
-    Our mission is to bring to our customers products of the highest purity tailored to<br>
-    their exact needs. 
-<div>
+    <h2 class="highlight">Serving science since 2001</h2>
+    <h1 class="section-title">LaserBio Labs</h1>
+    <div class="subtext">
+        LaserBio Labs was founded in 2001, with the goal of providing high-quality and <br>
+        affordable solutions for MALDI-TOF mass spectrometry to laboratories worldwide.<br>
+        Our mission is to bring to our customers products of the highest purity tailored to<br>
+        their exact needs. 
+    <div>
 </section>
 
 <section class="section-right background-map">
