--- a/templates/snippets/head.html
+++ b/templates/snippets/head.html
@@ -7,3 +7,7 @@
 <meta name="author" content="">
 <meta name="keywords" content="">
 <base href="/" ></base>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+>
