--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,40 @@
     </div>
 </section>
 
+<!-- -->
+<section class="section is-flex is-flex-direction-row">
+    <div class="container">
+        <img class="client-img" src="static/images/client--biorad-grey.png">
+    </div>
+    <div class="container">
+        <h1 class="title is-2 m-3">About LaserBio Labs</h1>
+        <div class="">  
+            With over a decade of experience in mass spectrometry, Laser Bio Labs has been at the
+            forefront of developing precision calibration standards for MALDI-TOF MS
+            applications.<br><br>
 
+            Our team of scientists and engineers work tirelessly to ensure that every calibration
+            kit meets the highest standards of quality and precision, enabling researchers and
+            analysts worldwide to achieve accurate and reproducible results.<br><br>
+
+            From pharmaceutical research to clinical diagnostics, our calibration standards are
+            trusted by leading institutions globally for their reliability and consistency.<br><br>
+        </div>
+    </div>
+</section>
+
+
+<section class="section has-text-centered">
+    <div class="container is-flex is-flex-direction-column is-align-content-center is-justify-items-center">
+        <h1 class="title is-2 m-3 has-text-centered">They trust us</h1>
+        <!-- gallery -->
+        <div class="has-text-centered">
+            Join hundreds of leading organizations who trust Laser Bio Labs for their mass spectrometry calibration needs 
+        </div>
+        <a href="/contact" class="button">Become a partner</a>
+    </div>
+
+</section>
 
 <section class="section-left background-protein">
     <h2 class="highlight">Serving science since 2001</h2>
