--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,3 +1,4 @@
+<!--
 <div id="footer">
     <nav id="footer-nav">
         <span class="footer-nav-item"> <a href="index.html">Home</a>                  </span>
@@ -15,3 +16,61 @@
     </span>
 
 </div>
+-->
+
+<footer class="footer">
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <h4 class="title is-4">LaserBioLabs</h4>
+                <p>
+                Leading manufacturer of precision MALDI-TOF MS calibration standards for research and
+                analytical laboratories worldwide.
+                </p>
+            </div>
+
+            <div class="column is-flex is-flex-direction-column">
+                <h4 class="title is-4">Products</h4>
+                <a href="/catalog.html"> Matrix Kits</a>
+                <a href="/catalog.html"> Bulk Matrix</a>
+                <a href="/catalog.html"> Peptide Calibration Mixtures</a>
+                <a href="/catalog.html"> Protein Calibration Mixtures</a>
+                <a href="/catalog.html"> Calibration Kits</a>
+                <a href="/catalog.html"> Protein Trypsin Digest Kits</a>
+            </div>
+
+            <div class="column is-flex is-flex-direction-column">
+                <h4 class="title is-4">Support</h4>
+                <a href="/faq.html"> Technical documentation</a>
+                <a href="/faq.html"> Application notes</a>
+                <a href="/faq.html"> Method development</a>
+                <a href="/faq.html"> Customer support</a>
+                <a href="/faq.html"> Training resources</a>
+            </div>
+            <div class="column is-flex is-flex-direction-column">
+                <h4 class="title is-4">Contact</h4>
+                <p>AREP CENTER 1 traverse des Brucs 06560 Valbonne, FRANCE</a>
+            <p>Phone: +33 9 84 23 77 19</a>
+        <p>Email: info@laserbiolabs.com</a>
+    <p>Fax: +33 4 92 94 01 43</a>
+            </div>
+        </div>
+        <div class="container is-flex is-flex-direction-column is-justify-items-center">
+            <hr>
+            <p class="has-text-centered">© 2024 Laser Bio Labs All rights reserved.</p>
+        </div>
+    </div>
+</footer>
+<!--
+
+  <div class="content has-text-centered">
+    <p>
+      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
+      The source code is licensed
+      <a href="https://opensource.org/license/mit">MIT</a>. The
+      website content is licensed
+      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
+        >CC BY NC SA 4.0</a
+      >.
+    </p>
+-->
