--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -45,10 +45,10 @@
 
     <div id="navbar-menu" class="navbar-menu">
         <div class="navbar-end">
-            <a class="navbar-item"> Home </a>
+            <a class="navbar-item" href="/"> Home </a>
 
             <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link"> Catalog </a>
+                <a class="navbar-link" href="/catalog.html"> Catalog </a>
 
                 <div class="navbar-dropdown"> 
                     <a class="navbar-item">   Matrix kits </a>
@@ -62,9 +62,9 @@
             </div>
 
             <!-- end of drop down menu -->
-            <a class="navbar-item"> How to order </a>
-            <a class="navbar-item"> FAQ </a>
-            <a class="navbar-item"> Contact </a>
+            <a class="navbar-item" href="/how_to_order.html"> How to order </a>
+            <a class="navbar-item" href="/faq.html"> FAQ </a>
+            <a class="navbar-item" href="/contact.html"> Contact </a>
         </div>
     </div>
 </nav>
