--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,27 @@
 {% block title %} Home {% endblock %}
 {% block page_content %} 
 
-<section class="section is-medium">
-    <div class="grid">
-        <div class="cell">
-            <h1 class="title is-1">Precision MALDI-TOF MS Calibration Standards</h1>
-            <h4 class="subtitle">Leading manufacturer of high-quality calibration kits for MALDI mass spectrometry. Trusted by laboratories worldwide for accurate and reliable results.</h4>
-            <a href="/catalog" class="button">View Catalog</a>
-            <a href="/contact" class="button">Contact us</a>
+<section class="section is-medium bg-color-light-blue">
+    <div class="container">
+        <div class="grid">
+            <div class="cell">
+                <h1 class="title is-1 mb-4 text-color-grey-1">Precision MALDI-TOF MS Calibration Standards</h1>
+                <h4 class="subtitle text-color-grey-4 line-height-big">Leading manufacturer of high-quality calibration kits for MALDI mass spectrometry. Trusted by laboratories worldwide for accurate and reliable results.</h4>
+                <a href="/catalog" class="button">View Catalog</a>
+                <a href="/contact" class="button bg-color-white border-color-grey-1 text-color-black">Contact us</a>
 
-        </div>
-        <div class="cell"> 
-            <img src="static/images/landing_page_pipette.jpeg"/>
+            </div>
+            <div class="cell">
+                <img class="border-radius-8" src="static/images/landing_page_pipette.jpeg"/>
+            </div>
         </div>
     </div>
 </section>
 
-<section class="section is-medium">
+<section class="section is-medium bg-color-white">
     <div class="container">
-        <h1 class="title is-2 m-3 has-text-centered">Why Choose Laser Bio Labs?</h1>
-        <h4 class="subtitle is-4 m-5 has-text-centered"> We provide the highest quality calibration standards with unmatched precision and reliability </h4>
+        <h1 class="title is-2 m-3 has-text-centered text-color-grey-1">Why Choose Laser Bio Labs?</h1>
+        <h4 class="subtitle is-4 m-5 has-text-centered text-color-grey-4"> We provide the highest quality calibration standards with unmatched precision and reliability </h4>
     </div>
     <div class="container">
         <div class="grid">
@@ -68,9 +70,9 @@
     <div class="container">
         <img class="client-img" src="static/images/client--biorad-grey.png">
     </div>
-    <div class="container">
-        <h1 class="title is-2 m-3">About LaserBio Labs</h1>
-        <div class="">  
+    <div class="container content">
+        <h1 class="title is-4 m-3">About LaserBio Labs</h1>
+        <p class="m-3">  
             With over a decade of experience in mass spectrometry, Laser Bio Labs has been at the
             forefront of developing precision calibration standards for MALDI-TOF MS
             applications.<br><br>
@@ -81,22 +83,98 @@
 
             From pharmaceutical research to clinical diagnostics, our calibration standards are
             trusted by leading institutions globally for their reliability and consistency.<br><br>
+        </p>
+    </div>
+</section>
+
+
+<!--
+<section class="section has-text-centered">
+    <div class="container content">
+        <h3 class="title is-4 m-3 ">They trust us</h1>
+        <div class="my-3">
+            Join hundreds of leading organizations who trust Laser Bio Labs for their mass spectrometry calibration needs 
         </div>
+        <div class="is-flex is-justify-content-space-around">
+            <img class="client-img" src="static/images/client--biorad-grey.png">
+            <img class="client-img" src="static/images/client--cnrs-grey.png">
+            <img class="client-img" src="static/images/client--eth-grey.png">
+            <img class="client-img" src="static/images/client--john_hopkins-grey.png">
+            <img class="client-img" src="static/images/client--kra-grey.png">
+            <img class="client-img" src="static/images/client--kratos-grey.png">
+        </div>
+
+        <a class="my-3" href="/contact" class="button">Become a partner</a>
+    </div>
+
+</section>
+-->
+<section class="section has-text-centered">
+    <div class="container content">
+        <h3 class="title is-4 m-3">They trust us</h3>
+        <!-- gallery -->
+        <div class="my-3">
+            Join hundreds of leading organizations who trust Laser Bio Labs for their mass spectrometry calibration needs
+        </div>
+        <div class="is-flex is-justify-content-space-around">
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--biorad-grey.png');"></div>
+                <span class="text-normal">BioRad</span>
+                <span class="text-normal">Industry</span>
+                <span class="text-hover">View case study</span>
+            </div>
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--cnrs-grey.png');"></div>
+                <span class="text-normal">CNRS</span>
+                <span class="text-normal">Academia</span>
+                <span class="text-hover">View case study</span>
+            </div>
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--eth-grey.png');"></div>
+                <span class="text-normal">ETH</span>
+                <span class="text-normal">Academia</span>
+                <span class="text-hover">View case study</span>
+            </div>
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--john_hopkins-grey.png');"></div>
+                <span class="text-normal">Johns Hopkins</span>
+                <span class="text-normal">Medical research</span>
+                <span class="text-hover">View case study</span>
+            </div>
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--kra-grey.png');"></div>
+                <span class="text-normal">KRA</span>
+                <span class="text-normal">Industry</span>
+                <span class="text-hover">View case study</span>
+            </div>
+            <div class="client-img">
+                <div class="background" style="background-image: url('static/images/client--kratos-grey.png');"></div>
+                <span class="text-normal">Kratos</span>
+                <span class="text-normal">Analytical chemistry</span>
+                <span class="text-hover">View case study</span>
+            </div>
+        </div>
+        <a class="my-3 button" href="/contact">Become a partner</a>
     </div>
 </section>
 
 
 <section class="section has-text-centered">
-    <div class="container is-flex is-flex-direction-column is-align-content-center is-justify-items-center">
-        <h1 class="title is-2 m-3 has-text-centered">They trust us</h1>
+    <div class="container content">
+        <h3 class="title is-4 m-3">Ready to enhance your MS accuracy ?</h1>
         <!-- gallery -->
-        <div class="has-text-centered">
-            Join hundreds of leading organizations who trust Laser Bio Labs for their mass spectrometry calibration needs 
+        <div class="my-3">
+            Explore our comprehensive catalogue of MALDI-TOF calibration standards
         </div>
-        <a href="/contact" class="button">Become a partner</a>
+        <a class="my-3" href="/catalog.html" class="button">Browse Products</a>
+        </div>
     </div>
 
 </section>
+
+
+<!-- END OF NEW CONTENT -->
+<!--
 
 <section class="section-left background-protein">
     <h2 class="highlight">Serving science since 2001</h2>
@@ -143,5 +221,7 @@
     <img class="client-img" src="static/images/client--vanderbilt_uni-grey.png">
     <img class="client-img" src="static/images/client--wwr-grey.png">
 </div>
+
 </section>
+-->
 {% endblock%}
